# asyncpgsa

./: .git-blame-ignore-revs  .gitignore  .travis.yml  Dockerfile  MANIFEST  README.md  contributing.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: check-and-test.yml
asyncpgsa/: __init__.py  connection.py  exceptions.py  log.py  pgsingleton.py  pool.py  record.py  row.py  transactionmanager.py  version.py
asyncpgsa/testing/: __init__.py  mockconnection.py  mockpgsingleton.py  mockpool.py  mockpreparedstmt.py  mocktransactionmanager.py
docs/: Makefile  conf.py  index.rst  make.bat
tests/: __init__.py  conftest.py  readme.md  test_connection.py  test_defaults.py  test_pgsingleton.py  test_pool.py  test_querying.py  test_test_framework.py
